tests/ui/impl-trait/variance.stderr
error: [*]
  --> $DIR/variance.rs:8:36
   |
LL | fn not_captured_early<'a: 'a>() -> impl Sized {}
   |                                    ^^^^^^^^^^

error: [*, o]
  --> $DIR/variance.rs:10:32
   |
LL | fn captured_early<'a: 'a>() -> impl Sized + Captures<'a> {}
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^

error: []
  --> $DIR/variance.rs:12:40
   |
LL | fn not_captured_late<'a>(_: &'a ()) -> impl Sized {}
   |                                        ^^^^^^^^^^

error: [o]
  --> $DIR/variance.rs:14:36
   |
LL | fn captured_late<'a>(_: &'a ()) -> impl Sized + Captures<'a> {}
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

